frame of app, header,footer, sub form, singlepost

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h1>my blog</h1>
+<app-header></app-header>
+<app-category-navbar></app-category-navbar>
+
+<div class="app-body">
+    <router-outlet></router-outlet>
+</div>
+
+<app-footer></app-footer>
