--- a/src/app/layouts/category-navbar/category-navbar.component.html
+++ b/src/app/layouts/category-navbar/category-navbar.component.html
@@ -1,1 +1,11 @@
-<p>category-navbar works!</p>
+<nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container">
+        <div class="collapse navbar-collapse justify-content-center">
+            <ul class="navbar nav">
+                <li class="nav-item ml-3"><a href="" class="nav-link">Programming</a></li>
+                <li class="nav-item ml-3"><a href="" class="nav-link">Animations</a></li>
+                <li class="nav-item ml-3"><a href="" class="nav-link">Hobbies</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
