--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,19 @@ body{
     font-size: 12px;
     color: var(--body-text-color);
 }
+
+.site-logo {
+    padding: 5px 20px;
+    border-radius: 20px;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+}
+
+.nav-link {
+    color: var(--primary-color);
+}
+
+.shadow-effect{
+    border: none;
+    box-shadow: 0px, 0px, 33px, -10px rgba(71, 114, 254, 0.3);
+}
