- added comments, and editing some components

--- a/src/app/comments/comment-form/comment-form.component.html
+++ b/src/app/comments/comment-form/comment-form.component.html
@@ -1,1 +1,22 @@
-<p>comment-form works!</p>
+<div class="card mt-5 shadow-effect">
+    <div class="card-body">
+        <h4>Leave a Comment</h4>
+        <p></p>
+
+        <form >
+            <div class="form-group">
+                <label for="">Name</label>
+                <input type="text" class="form-control mt-1" placeholder="Enter your name here">
+            </div>
+
+            <div class="form-group mt-3">
+                <label for="">Comment</label>
+                <textarea cols="30" rows="10" class="form-control mt-1" placeholder="Add"></textarea>
+            </div>
+
+            <button class="btn btn-theme mt-4">Add a comment</button>
+
+        </form>
+
+    </div>
+</div>
