--- a/src/app/layouts/post-card/post-card.component.html
+++ b/src/app/layouts/post-card/post-card.component.html
@@ -1,12 +1,15 @@
-<div class="card">
+<div class="card shadow-effect">
      <img src="assets\photos\DSC06876.jpg" alt="post-image" class="card-img-top">
      
      <div class="card-body">
-        <small class="bg-light text-danger text-center"> Design </small>
-        <small class="bg-light text-success text-center ml-3"> Featured </small>
-        <small class="bg-light text-info text-center ml-3"> Blabla </small>
+        <small class="text-danger"> Design </small>
+        <small class="text-success" style="margin-left: 0.5rem;"> Featured </small>
+        <small class="text-info" style="margin-left: 0.5rem;"> Blabla </small>
 
         <h5 class="mt-1">Title</h5>
         <p>Blalbaalablalalblabllablablbalblalbal</p>
+
+        <small class="text-warning "> LAST UPDATED - 12 APR 23 </small>
+
      </div>
-</div>
+</div>    
