--- a/src/app/pages/single-post/single-post.component.html
+++ b/src/app/pages/single-post/single-post.component.html
@@ -1,1 +1,28 @@
-<p>single-post works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <div class="card shadow-effect">
+                <img src="assets\photos\DSC06876.jpg" alt="" class="">
+                <div class="card-body">
+                    <small class="bg-light text-danger text-center">Design</small>
+                    <small class="bg-light text-success text-center ml-2">featured</small>
+                    <small class="bg-light text-info text-center ml-2">views</small>
+                    <small class="bg-light text-warning text-center ml-2">last updated</small>
+
+                    <h1 class="mt-3 mb-3">Title</h1>
+                    <p>dsgdfhaasrfhr</p>
+                </div>
+            </div>
+
+            <app-comment-form></app-comment-form>
+            <app-comment-list></app-comment-list>
+
+        </div>
+
+        <div class="col-md-3">
+            <app-post-card></app-post-card>
+            <app-post-card></app-post-card>
+            <app-post-card></app-post-card>
+        </div>
+    </div>
+</div>
