--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -6,7 +6,7 @@
                 <div>
                     <ul class="nav justify-content-center">
                         <li class="nav-item"> <a href="" class="nav-link">Home</a> </li>
-                        <li class="nav-item"> <a href="" class="nav-link">About</a> </li>
+                        <li class="nav-item"> <a href="about" class="nav-link">About</a> </li>
                         <li class="nav-item"> <a href="" class="nav-link">Contact</a> </li>
                     </ul>
                 </div>
