--- a/src/app/pages/single-category/single-category.component.html
+++ b/src/app/pages/single-category/single-category.component.html
@@ -1,1 +1,29 @@
-<p>single-category works!</p>
+<div class="bg-theme p-5">
+    <div class="container">
+        <h2 class="text-white">GENERAL KNOWLEDGE</h2>
+        <p class="text-white">adkfladilfalofjkgvjkf;kk;</p>
+    </div>
+</div>
+
+<div class="container mt-5 mb-5">
+    <div class="row">
+        <div class="col-md-4 mb-3">
+            <app-post-card></app-post-card>
+        </div>
+        <div class="col-md-4 mb-3">
+            <app-post-card></app-post-card>
+        </div>
+        <div class="col-md-4 mb-3">
+            <app-post-card></app-post-card>
+        </div>
+        <div class="col-md-4 mb-3">
+            <app-post-card></app-post-card>
+        </div>
+        <div class="col-md-4 mb-3">
+            <app-post-card></app-post-card>
+        </div>
+        <div class="col-md-4 mb-3">
+            <app-post-card></app-post-card>
+        </div>
+    </div>
+</div>
