--- a/src/app/subscription-form/subscription-form.component.html
+++ b/src/app/subscription-form/subscription-form.component.html
@@ -15,7 +15,7 @@
                         </div>
 
                         <div class="col-md-2">
-                            <button class="btn btn-info btn-sub">
+                            <button class="btn btn-theme">
                                 SUBSCRIBE
                             </button>
                         </div>
