--- a/src/styles.css
+++ b/src/styles.css
@@ -28,5 +28,34 @@ body{
 
 .shadow-effect{
     border: none;
-    box-shadow: 0px, 0px, 33px, -10px rgba(71, 114, 254, 0.3);
+    box-shadow: 0px 0px 33px -10px rgba(71, 114, 254, 0.3);
 }
+
+.bg-theme{
+    background-color: var(--primary-color);
+}
+
+.bg-secondary-theme{
+    background-color: var(--secondary-color);
+}
+
+.text-theme-primary{
+    color:var(--primary-color)
+}
+
+input[type = text], input[type = email] {
+    height: 60px;
+    padding-left: 20px;
+    font-size: 13px;
+    width: 100%;
+}
+
+.btn-theme{
+    height: 58px;
+    border: none;
+    font-size: 13px;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    padding-left: 40px;
+    padding-right: 40px;
+    }
